<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".PrincipalFormularioActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/valtitulocuestionario"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/valsintomas"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="263dp"
        android:layout_height="146dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <CheckBox
            android:id="@+id/ckbgustoolfato"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/valsint1"
            android:textColor="#040303"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbtos"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/valsint2"
            android:textColor="#040303"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbgarganta"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/valsint3"
            android:textColor="#040303"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbnasal"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:text="@string/valsint4"
            android:textColor="#040303"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbfiebre"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/valsint5"
            android:textColor="#040303"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbninguno"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/valsint6"
            android:textColor="#040303"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valfiebre"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <RadioGroup
        android:id="@+id/radioGroupP2"
        android:layout_width="318dp"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rbtP2si"
            android:layout_width="148dp"
            android:layout_height="24dp"
            android:text="@string/valrbtsi"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbtP2no"
            android:layout_width="124dp"
            android:layout_height="24dp"
            android:text="@string/valrbtno"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valpr3"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupP2" />

    <RadioGroup
        android:id="@+id/radioGrouppP3"
        android:layout_width="336dp"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/rbtP3si"
            android:layout_width="148dp"
            android:layout_height="27dp"
            android:text="@string/valrbtp3si"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbtP3no"
            android:layout_width="169dp"
            android:layout_height="27dp"
            android:text="@string/valprt3no"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valp4"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrouppP3" />

    <RadioGroup
        android:id="@+id/RadioGroupP4"
        android:layout_width="346dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/rbtP4si"
            android:layout_width="149dp"
            android:layout_height="28dp"
            android:text="@string/lvrbtP4"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbtP4no"
            android:layout_width="182dp"
            android:layout_height="29dp"
            android:text="@string/valrbtP4no"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valprt5"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupP4" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="321dp"
        android:layout_height="154dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <CheckBox
            android:id="@+id/ckbluz"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/valchkluz"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbagua"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/valchkagua"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbinternet"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/valchkinternet"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckbcable"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/valchkcable"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnresolverformulario"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="68dp"
        android:text="@string/valbtnResolverFormulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnlistarformulario"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/valbtnlistarform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>