<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".PrincipalRegistroActivity">

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/valtitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDNIRegistro"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/valdni"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulo"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/etNombreRegstro"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/valnombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDNIRegistro" />

    <EditText
        android:id="@+id/etApellidoRegistro"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/valapellido"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreRegstro"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etemailRegistro"
        android:layout_width="357dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/valemail"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellidoRegistro"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etpaswRegistro"
        android:layout_width="357dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/valpass"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemailRegistro"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtgenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/valgenero"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpaswRegistro" />

    <RadioGroup
        android:id="@+id/RadioGroupGenero"
        android:layout_width="348dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtgenero">

        <RadioButton
            android:id="@+id/rbthombre"
            android:layout_width="148dp"
            android:layout_height="33dp"
            android:text="@string/valhombre"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbtmujer"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:text="@string/valmujer"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/txthobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valhobbie"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupGenero" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="347dp"
        android:layout_height="181dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txthobby">

        <CheckBox
            android:id="@+id/chkdeporte"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/valdeporte"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/chkpintura"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/valpintura"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/chkotro"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/valotro"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etotrohobby"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:ems="10"
            android:hint="@string/valotrohobbie"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnaccederregistro"
        android:layout_width="152dp"
        android:layout_height="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="60dp"
        android:text="Acceder"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnlistarregistro"
        android:layout_width="152dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:text="Listar"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_checklist_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>